made changes to profile page to ensure that cards are collapsable

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -519,28 +519,23 @@ ul{
     padding: 20px;
 }
 #userData-name{
-    display: flex;
-    justify-content: start;
+    color: white;
     margin-left: 10px;
     font-size: 25px;
 }
 #userData-email{
-    display: flex;
-    justify-content: start;
-    margin-left: 10px;
+    color: white;
+    margin-left: -30px;
+    margin-top: -20px;
     font-size: 20px;
 }
 #userData-admin{
     display: flex;
     justify-content: start;
+    color: white;
     margin-left: 10px;
+    margin-bottom: 10px;
     font-size: 20px;
-}
-.links-list{
-    display: flex;
-    justify-content: end;
-    margin-right: 20px;
-    margin-top: -100px;
 }
 #profileLog-link{
     display: flex;
@@ -664,6 +659,44 @@ h4{
 #file-btn{
     background-color: white;
 }
+#nav-area{
+    display: flex;
+    justify-content: end;
+}
+#toggle-nav{
+    color: white;
+    border: 0px;
+}
+#nav-icon{
+    display: flex;
+    justify-content: end;
+    color: white;
+    font-size: 30px;
+}
+#offcanvasDarkNavbar{
+    background-color: rgba(181,190,203,1);
+}
+#close-btn{
+    margin-top: -30px;
+}
+#profileLog-btn{
+    font-size: 20px;
+    margin-top: 10px;
+    color: white;
+}
+#profileHome-btn{
+    font-size: 20px;
+    color: white;
+    margin-left: 15px;
+    text-decoration: none;
+}
 
+#profileLog-btn:hover{
+    color: grey;
+}
+#profileHome-btn:hover{
+    color: grey;
+}
+  
 
 
